--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                                 <li><a href="#">Anime Details</a></li>
                                 <li><a href="#">Anime Watching</a></li>
                                 <li><a href="#">Sign Up</a></li>
-                                <li><a href="#">Login</a></li>
+                                <li><a href="login/login.php">Login</a></li>
                             </ul>
                         </nav>
                     </div>
